fix job shortname aspect ratio on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -257,6 +257,7 @@
     flex-direction: column;
     justify-content: space-around;
     margin-left: 15px;
+    flex: 2;
 }
 
 .erfahrungen .job .jobkarte p {
@@ -372,11 +373,17 @@ h3 {
         padding: 15px;
     }
 
-    .erfahrungen .job .jobkarte img {
+    .erfahrungen .job .jobkarte .shortname {
         width: 50px;
         height: 50px;
         background: white;
         border-radius: 15px;
+        font-size: 0.75rem;
+    }
+
+    .erfahrungen .job .jobkarte .bg-icon {
+        font-size: 3rem;
+        bottom: -10px;
     }
 
     .erfahrungen .job .jobkarte .unternehmen {
